refactoring, added Spring Security

--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Header</title>
@@ -12,35 +12,36 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">ASTRON LTD</a>
+            <a class="navbar-brand" href="/"> ASTRON LTD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item" th:if="${session.user==null}">
+                    <li class="nav-item" sec:authorize="isAuthenticated() == false">
                         <a class="nav-link active" aria-current="page" href="/user/registration">Registration</a>
                     </li>
-                    <li class="nav-item" th:if="${session.user==null}">
+                    <li class="nav-item" sec:authorize="isAuthenticated() == false">
                         <a class="nav-link active" aria-current="page" href="/user/authorization">Sign in</a>
                     </li>
-                    <li class="nav-item" th:if="${session.user!=null}">
-                        <a class="nav-link active" aria-current="page" href="/user/logout">log out</a>
+                    <li class="nav-item" sec:authorize="hasAuthority('USER')">
+                        <a class="nav-link active" aria-current="page" href="/task/create">Add new task</a>
                     </li>
-                    <li class="nav-item" th:if="${session.user!=null}">
-                        <a class="nav-link active" aria-current="page" href="/task/create">Add new Task</a>
-                    </li>
-                    <li class="nav-item" th:if="${session.user!=null}">
+                    <li class="nav-item" sec:authorize="hasAuthority('USER')">
                         <a class="nav-link active" aria-current="page" href="/task/all-tasks">All Tasks</a>
                     </li>
-                    <li class="nav-item" th:if="${session.user!=null}">
-                        <a class="nav-link active" aria-current="page" href="/client/create">New Client</a>
+                    <li class="nav-item" sec:authorize="hasAuthority('USER')">
+                        <a class="nav-link active" aria-current="page" href="/client/create">Add new Client</a>
                     </li>
-                    <li class="nav-item" th:if="${session.user!=null}">
+                    <li class="nav-item" sec:authorize="hasAuthority('USER')">
                         <a class="nav-link active" aria-current="page" href="/client/all-clients">All Clients</a>
                     </li>
-                    <li class="nav-item" th:if="${session.user!=null}">
+                    <li class="nav-item" sec:authorize="hasAuthority('USER')">
                         <a class="nav-link active" aria-current="page" href="/user/all-users">All Users</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link active" aria-current="page" href="/user/logout">log out</a>
+                    </li>
                     </li>
                 </ul>
             </div>
