--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -3,41 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>All-users</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0
+        }
+
+        .mb-3 {
+            width: 100%;
+        }
+
+    </style>
 </head>
 <body>
 <div th:replace="~{_header}"></div>
-<form th:action="@{/all-users}" th:object="${users}" method="get" >
+<form th:action="@{/all-users}" th:object="${users}" method="get">
 
-
-
+    <div style="text-align: center;"><h1>List of Users:</h1></div>
     <hr>
-    <p>List of users:</p>
-
-    <div th:each="user : ${users}">
-        <a th:href="@{/user/{id}(id=${user.getId()})}"
-           th:text="${user.getUsername() + ' ' + user.getName()}">userName</a>
-
-    </div>
-    <!--<div>
+    <div class="mb-3">
         <table class="table">
             <thead class="table-light">
             <tr>
+                <th scope="col">ID</th>
                 <th scope="col">Username</th>
                 <th scope="col">Position</th>
-                <th scope="col">Name</th>
+                <th scope="col">Telephone</th>
+                <th scope="col">Action</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="client: ${users}">
-                <td th:text="${} + '  '"/>
-                <td th:text="${} + '  '"/>
-                <td th:text="${} + '  '"/>
+            <tr th:each="user: ${users}" th:action="@{/user/{id}(id=${user.getId()})}" th:method="GET">
+                <td th:text="${user.getId()} + '  '"/>
+                <td th:text="${user.getUsername()} + '  '"/>
+                <td th:text="${user.position} + '  '"/>
+                <td th:text="${user.getTelephones()} + '  '"/>
+                <td>
+                    <form th:method="GET" th:action="@{/user/{id}(id=${user.getId()})}" th:object="${user}">
+                        <input type="submit"
+                               value="Show details"/></form>
+                </td>
             </tr>
             </tbody>
         </table>
-    </div>-->
+    </div>
     <hr>
 
 </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
