--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -3,21 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Authorization</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body{width:100%; height:100%}
+        .mb-3 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+        form{padding:50px}
+    </style>
 </head>
 <body>
 <div th:replace="~{_header}"></div>
 <form th:action="@{/user/authorization}" th:object="${authUser}" method="post" >
+    <div style="text-align: center;"><p>Enter your login and password:</p></div>
 
-    <input type="text" th:field="*{username}" placeholder="username">
-    <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
-    <p th:if="${message != null}" th:text="${message}"></p>
+    <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" class="form-control" th:field="*{username}" id="username">
+        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="exampleInputPassword" class="form-label">Password</label>
+        <input type="password" class="form-control" th:field="*{password}" id="exampleInputPassword">
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+    </div>
 
-    <input type="text" th:field="*{password}" placeholder="password">
-    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
-    <p th:if="${message != null}" th:text="${message}"></p>
-
-    <button>Login</button>
+    <div style="text-align:center"><button  class="btn btn-secondary">Log in</button></div>
 
 </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
