--- a/src/main/resources/templates/client/all-clients.html
+++ b/src/main/resources/templates/client/all-clients.html
@@ -3,33 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>All-clients</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0
+        }
+
+        .mb-3 {
+            width: 100%;
+        }
+
+    </style>
 </head>
 <body>
 <div th:replace="~{_header}"></div>
-<form th:action="@{/client/all-clients}" th:object="${clients}" method="get" >
+<form th:action="@{/client/all-clients}" th:object="${clients}" method="get">
 
-
-
+    <div style="text-align: center;"><h1>List of Clients:</h1></div>
     <hr>
-    <p>List of tasks:</p>
-    <div>
+    <div class="mb-3">
         <table class="table">
             <thead class="table-light">
             <tr>
-                <th scope="col">Client Name</th>
+                <th scope="col">ID</th>
+                <th scope="col">Name of client</th>
                 <th scope="col">Address</th>
                 <th scope="col">Description</th>
+                <th scope="col">Action</th>
             </tr>
-            <div th:each="client : ${clients}">
-                <a th:href="@{/client/{id}(id=${client.getId()})}"
-                   th:text="${client.clientName + ' ' + client.addresses + ' ' + client.description}">userName</a>
-
-            </div>
             </thead>
+            <tbody>
+            <tr th:each="client: ${clients}" th:action="@{/client/{id}(id=${client.getId()})}" th:method="GET">
+                <td th:text="${client.getId()} + '  '"/>
+                <td th:text="${client.getClientName()} + '  '"/>
+                <td th:text="${client.getAddresses()} + '  '"/>
+                <td th:text="${client.getDescription()} + '  '"/>
+                <td>
+                    <form th:method="GET" th:action="@{/client/{id}(id=${client.getId()})}" th:object="${client}">
+                        <input type="submit"
+                               value="Show details"/></form>
+                </td>
+            </tr>
+            </tbody>
         </table>
     </div>
     <hr>
 
 </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
