--- a/src/main/resources/templates/client/create.html
+++ b/src/main/resources/templates/client/create.html
@@ -1,36 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>newClient</title>
+    <meta charset="UTF-8">
+    <title>Add new client</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0
+        }
+
+        .mb-3 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+
+        form {
+            padding: 50px
+        }
+    </style>
 </head>
 <body>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
 <div th:replace="~{_header}"></div>
 <form th:action="@{/client/create}" th:object="${newClient}" th:method="post">
 
-  <input type="text" th:field="*{clientName}" placeholder="clientName">
-  <p th:if="${#fields.hasErrors('clientName')}" th:errors="*{clientName}"></p>
+    <div style="text-align: center;"><h1>Create client:</h1></div>
 
-  <input type="text" th:field="*{address}" placeholder="address">
-  <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
+    <div class="mb-3">
+        <label for="ClientName" class="form-label">Name of Client</label>
+        <input type="text" class="form-control" th:field="*{clientName}" id="ClientName">
+        <p th:if="${#fields.hasErrors('clientName')}" th:errors="*{clientName}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Address" class="form-label">Address</label>
+        <input type="text" class="form-control" th:field="*{address}" id="Address">
+        <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Description</label>
+        <textarea class="form-control" th:field="*{description}" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
+    </div>
 
-  <input type="text" th:field="*{description}" placeholder="description">
-  <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
-
-<!--  <input type="text" th:field="*{status}" placeholder="status">-->
-<!--  <p th:if="${#fields.hasErrors('status')}" th:errors="*{status}"></p>-->
-
-<!--  <input type="text" th:field="*{description}" placeholder="description">-->
-<!--  <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>-->
 
 
-  <button>Add</button>
+    <div style="text-align:center"><button  class="btn btn-secondary">Add new client</button></div>
 
 </form>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
