--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,39 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body{width:100%; height:100%; margin:0}
+        .mb-3 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+        form{padding:50px}
+    </style>
 </head>
 <body>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <div th:replace="~{_header}"></div>
 <form th:action="@{/user/registration}" th:object="${newUser}" th:method="post">
+    <div style="text-align: center;"><p>Enter your registration details:</p></div>
+    <div class="mb-3">
+        <label for="FirstName" class="form-label">First Name</label>
+        <input type="text" class="form-control" th:field="*{name}" id="FirstName">
+        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="LastName" class="form-label">Last Name</label>
+        <input type="text" class="form-control" th:field="*{lastname}" id="LastName">
+        <p th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="UserName" class="form-label">Username</label>
+        <input type="text" class="form-control" th:field="*{username}" id="UserName">
+        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Email" class="form-label">Email</label>
+        <input type="text" class="form-control" th:field="*{email}" id="Email">
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Password" class="form-label">Password</label>
+        <input type="text" class="form-control" th:field="*{password}" id="Password">
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Telephone" class="form-label">Telephone</label>
+        <input type="text" class="form-control" th:field="*{telephone}" id="Telephone">
+        <p th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Position" class="form-label">Position</label>
+        <input type="text" class="form-control" th:field="*{position}" id="Position">
+        <p th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></p>
+    </div>
 
-    <input type="text" th:field="*{name}" placeholder="name">
-    <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
-
-    <input type="text" th:field="*{lastname}" placeholder="lastname">
-    <p th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></p>
-
-    <input type="text" th:field="*{username}" placeholder="username">
-    <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
-
-    <input type="text" th:field="*{email}" placeholder="email">
-    <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-
-    <input type="text" th:field="*{password}" placeholder="password">
-    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
-
-    <input type="text" th:field="*{telephone}" placeholder="telephone">
-    <p th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}"></p>
-
-    <input type="text" th:field="*{position}" placeholder="position">
-    <p th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></p>
-
-    <button>Registration</button>
-
+    <div style="text-align:center"><button  class="btn btn-secondary">Registration</button></div>
 </form>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
