--- a/src/main/resources/templates/task/all-tasks.html
+++ b/src/main/resources/templates/task/all-tasks.html
@@ -3,15 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>All-tasks</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0
+        }
+
+        .mb-3 {
+            width: 100%;
+        }
+
+    </style>
 </head>
 <body>
 <div th:replace="~{_header}"></div>
 <form th:action="@{/task/all-tasks}" th:object="${tasks}" method="get" >
 
-
-
+    <div style="text-align: center;"><h1>List of Tasks:</h1></div>
     <hr>
-    <p>List of tasks:</p>
+    <div class="mb-3">
+        <table class="table">
+            <thead class="table-light">
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Creator</th>
+                <th scope="col">Performer</th>
+                <th scope="col">Client</th>
+                <th scope="col">Description</th>
+                <th scope="col">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="task: ${tasks}" th:action="@{/task/{id}(id=${task.getId()})}" th:method="GET">
+                <td th:text="${task.getId()} + '  '"/>
+                <td th:text="${task.getCreator().getUsername()} + '  '"/>
+                <td th:text="${task.getPerformer().getUsername()} + '  '"/>
+                <td th:text="${task.getClient().getClientName()} + '  '"/>
+                <td th:text="${task.getDescription()} + '  '"/>
+                <td>
+                    <form th:method="GET" th:action="@{/task/{id}(id=${task.getId()})}" th:object="${task}">
+                        <input type="submit"
+                               value="Show details"/></form>
+                </td>
+            </tr>
+            </tbody>
+    <hr>
+        </table>
+    </div>
+    <hr>
+
+</form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+
+
+
+    <!--<p>List of tasks:</p>
     <div>
         <table class="table">
             <thead class="table-light">
@@ -21,25 +76,35 @@
                 <th scope="col">Client</th>
                 <th scope="col">Description</th>
             </tr>
+            </thead>
+            <tbody>
+
+
+
+
+
             <div th:each="task : ${tasks}">
                 <a th:href="@{/task/{id}(id=${task.getId()})}"
                    th:text="${task.getCreator().username + ' ' + task.performer.username + ' ' + task.getClient().clientName + ' ' + task.getDescription()}">userName</a>
 
             </div>
-            </thead>
-<!--            <tbody>-->
-            <!--<div th:each="task : ${tasks}">
+
+
+
+
+&lt;!&ndash;            <tbody>&ndash;&gt;
+            &lt;!&ndash;<div th:each="task : ${tasks}">
                 <a th:href="@{/task/{id}(id=${task.getId()})}"
                    th:text="${task.getCreator().username + ' ' + task.performer.username + ' ' + task.getClient().clientName + ' ' + task.getDescription()}">userName</a>
 
-            </div>-->
-            <!--<tr th:each="task: ${tasks}">
+            </div>&ndash;&gt;
+            &lt;!&ndash;<tr th:each="task: ${tasks}">
                 <td th:href="${task.creator} + '  '"/>
                 <td th:text="${task.performer} + '  '"/>
                 <td th:text="${task.client} + '  '"/>
                 <td th:text="${task.description} + '  '"/>
-            </tr>-->
-<!--            </tbody>-->
+            </tr>&ndash;&gt;
+&lt;!&ndash;            </tbody>&ndash;&gt;
         </table>
     </div>
     <hr>
@@ -47,3 +112,4 @@
 </form>
 </body>
 </html>
+-->
