--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -1,35 +1,77 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>newTask</title>
+    <meta charset="UTF-8">
+    <title>newTask</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0
+        }
+
+        .mb-3 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+
+        .mb-4 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+            height: 1000%;
+        }
+
+        form {
+            padding: 50px
+        }
+    </style>
 </head>
 <body>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <div th:replace="~{_header}"></div>
+
+
 <form th:action="@{/task/create}" th:object="${newTask}" th:method="post">
 
-  <input type="text" th:field="*{creator}" placeholder="creator">
-  <p th:if="${#fields.hasErrors('creator')}" th:errors="*{creator}"></p>
+    <div style="text-align: center;"><h1>Create task:</h1></div>
 
-  <input type="text" th:field="*{performer}" placeholder="performer">
-  <p th:if="${#fields.hasErrors('performer')}" th:errors="*{performer}"></p>
+    <div class="mb-3">
+        <label for="Creator" class="form-label">Creator</label>
+        <input type="text" class="form-control" th:field="*{creator}" id="Creator">
+        <p th:if="${#fields.hasErrors('creator')}" th:errors="*{creator}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Performer" class="form-label">Performer</label>
+        <input type="text" class="form-control" th:field="*{performer}" id="Performer">
+        <p th:if="${#fields.hasErrors('performer')}" th:errors="*{performer}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Client" class="form-label">Client</label>
+        <input type="text" class="form-control" th:field="*{client}" id="Client">
+        <p th:if="${#fields.hasErrors('client')}" th:errors="*{client}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Description</label>
+        <textarea class="form-control" th:field="*{description}" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
+    </div>
 
 
-  <input type="text" th:field="*{client}" placeholder="client">
-  <p th:if="${#fields.hasErrors('client')}" th:errors="*{client}"></p>
-
-    <input type="text" th:field="*{description}" placeholder="description">
-    <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
-
-
-
-  <button>Add</button>
+    <div style="text-align:center">
+        <button class="btn btn-secondary">Add Task</button>
+    </div>
 
 </form>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
