--- a/src/main/resources/templates/task/task.html
+++ b/src/main/resources/templates/task/task.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Task</title>
+    <meta charset="UTF-8">
+    <title>Task page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0
+        }
 
+        .mb-3 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+
+        form {
+            padding: 14px
+        }
+    </style>
 </head>
 <body>
 <div th:replace="~{_header}"></div>
 
 <form th:method="post" th:action="@{/task/{id}(id=${id})}" th:object="${task}">
 
-  <input type="text" th:field="*{creator.username}" placeholder="creator">
-  <p th:if="${#fields.hasErrors('creator')}" th:errors="*{creator.username}"></p>
+    <div style="text-align: center;"><h2>Task information:</h2></div>
 
-  <input type="text" th:field="*{performer.username}" placeholder="performer">
-  <p th:if="${#fields.hasErrors('performer')}" th:errors="*{performer.username}"></p>
-
-  <input type="text" th:field="*{client.clientName}" placeholder="client">
-  <p th:if="${#fields.hasErrors('client')}" th:errors="*{client.clientName}"></p>
-
-  <input type="text" th:field="*{description}" placeholder="description">
-  <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
-
-
-  <button>Edit</button>
-
+    <div class="mb-3">
+        <label for="NameOfCreator" class="form-label">Name of Creator</label>
+        <input type="text" class="form-control" th:field="*{creator.username}" id="NameOfCreator">
+        <p th:if="${#fields.hasErrors('creator.username')}" th:errors="*{creator.username}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="NameOfPerformer" class="form-label">Name of Performer</label>
+        <input type="text" class="form-control" th:field="*{performer.username}" id="NameOfPerformer">
+        <p th:if="${#fields.hasErrors('performer.username')}" th:errors="*{performer.username}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="NameOfClient" class="form-label">Name of Client</label>
+        <input type="text" class="form-control" th:field="*{client.clientName}" id="NameOfClient">
+        <p th:if="${#fields.hasErrors('client.clientName')}" th:errors="*{client.clientName}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Description" class="form-label">Description</label>
+        <input type="text" class="form-control" th:field="*{description}" id="Description">
+        <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
+    </div>
+    <div style="text-align:center">
+        <button class="btn btn-secondary">Edit</button>
+    </div>
 </form>
-<!--<form th:action="@{/user/{id}}" th:object="${user}" method="get">
 
-
-    User ID:
-    <td th:text="${user.getId()}">User ID</td>
-    <br/>
-    User name:
-    <td th:text="${user.getUsername()}">User Username</td>
-    <br/>
-    User password:
-    <td th:text="${user.getPassword()}">User Password</td>
-    <br/>
-    User e-mail:
-    <td th:text="${user.getEmail()}">User E-mail</td>
-
-    <br/>
-
-   &lt;!&ndash; <form th:method="get" th:action="@{/user/{id}/edit(id=${user.getId()})} " th:object="${user}">
-        <input type="submit" value="Edit user">
-    </form>
-    <form th:method="get" th:action="@{/{id}/edit(id=${user.getId()})}" th:object="${user}">
-        <input type="submit" value="Edit"/></form>&ndash;&gt;
-    <form th:method="get" th:action="@{/user/{id}/(id=${user.getId()})}" th:object="${user}">
-        <input type="submit" value="Edit1">
-    </form>
-
-    <form th:method="DELETE" th:action="@{/user/{id}(id=${user.getId()})}">
-        <input type="submit" value="Delete">
-    </form>
-</form>-->
+<form th:method="DELETE" th:action="@{/task/{id}(id=${id})}">
+    <div style="text-align:center">
+        <button class="btn btn-secondary">Delete</button>
+    </div>
+</form>
 </body>
 </html>
