--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,63 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <title>User page</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        html, body{width:100%; height:100%; margin:0}
+        .mb-3 {
+            margin-left: auto;
+            margin-right: auto;
+            width: 25%;
+        }
+        form{padding:14px}
+    </style>
 </head>
 <body>
 <div th:replace="~{_header}"></div>
 
-    <form th:method="post" th:action="@{/user/{id}(id=${id})}" th:object="${user}">
+<form th:method="POST" th:action="@{/user/{id}(id=${id})}" th:object="${user}">
 
-    <input type="text" th:field="*{name}" placeholder="name">
-    <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+    <div style="text-align: center;"><h2>User information:</h2></div>
 
-    <input type="text" th:field="*{lastname}" placeholder="lastname">
-    <p th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></p>
 
-    <input type="text" th:field="*{username}" placeholder="username">
-    <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
-
-    <input type="text" th:field="*{email}" placeholder="email">
-    <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-
-    <input type="text" th:field="*{password}" placeholder="password">
-    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
-
-    <input type="text" th:field="*{position}" placeholder="position">
-    <p th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></p>
-
-    <button>Edit</button>
-
+    <div class="mb-3">
+        <label for="FirstName" class="form-label">First Name</label>
+        <input type="text" class="form-control" th:field="*{name}" id="FirstName">
+        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="LastName" class="form-label">Last Name</label>
+        <input type="text" class="form-control" th:field="*{lastname}" id="LastName">
+        <p th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="UserName" class="form-label">Username</label>
+        <input type="text" class="form-control" th:field="*{username}" id="UserName">
+        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Email" class="form-label">Email</label>
+        <input type="text" class="form-control" th:field="*{email}" id="Email">
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Password" class="form-label">Password</label>
+        <input type="text" class="form-control" th:field="*{password}" id="Password">
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+    </div>
+    <div class="mb-3">
+        <label for="Position" class="form-label">Position</label>
+        <input type="text" class="form-control" th:field="*{position}" id="Position">
+        <p th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></p>
+    </div>
+    <div style="text-align:center"><button  class="btn btn-secondary">Edit</button></div>
 </form>
-<!--<form th:action="@{/user/{id}}" th:object="${user}" method="get">
 
-
-    User ID:
-    <td th:text="${user.getId()}">User ID</td>
-    <br/>
-    User name:
-    <td th:text="${user.getUsername()}">User Username</td>
-    <br/>
-    User password:
-    <td th:text="${user.getPassword()}">User Password</td>
-    <br/>
-    User e-mail:
-    <td th:text="${user.getEmail()}">User E-mail</td>
-
-    <br/>
-
-    <form th:method="get" th:action="@{/user/{id}/edit(id=${user.getId()})} " th:object="${user}">
-        <input type="submit" value="Edit user">
-    </form>
-    <form th:method="get" th:action="@{/{id}/edit(id=${user.getId()})}" th:object="${user}">
-        <input type="submit" value="Edit"/></form>&ndash;&gt;
-    <form th:method="get" th:action="@{/user/{id}/(id=${user.getId()})}" th:object="${user}">
-        <input type="submit" value="Edit1">
+    <form th:method="DELETE" th:action="@{/user/{id}(id=${id})}">
+        <div style="text-align:center"><button  class="btn btn-secondary">Delete</button></div>
     </form>
 
-    <form th:method="DELETE" th:action="@{/user/{id}(id=${user.getId()})}">
-        <input type="submit" value="Delete">
-    </form>
-</form>-->
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
