--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>All-users</title>
@@ -15,20 +15,35 @@
         .mb-3 {
             width: 100%;
         }
+        .pagination {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100px;
+            navbutton_background_color: black;
+        }
+        footer {
+            position: sticky;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 55px;
+        }
 
     </style>
 </head>
 <body>
-<div th:replace="~{_header}"></div>
-<form th:action="@{/all-users}" th:object="${users}" method="get">
-
+<div th:replace="~{fragments/header}"></div>
+<div sec:authorize="hasAuthority('ADMIN')">
+<form th:action="@{/all-users}"></form>
+<div th:fragment="content">
     <div style="text-align: center;"><h1>List of Users:</h1></div>
     <hr>
     <div class="mb-3">
         <table class="table">
             <thead class="table-light">
-            <tr>
-                <th scope="col">ID</th>
+            <tr table-secondary>
                 <th scope="col">Username</th>
                 <th scope="col">Position</th>
                 <th scope="col">Telephone</th>
@@ -36,23 +51,51 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="user: ${users}" th:action="@{/user/{id}(id=${user.getId()})}" th:method="GET">
-                <td th:text="${user.getId()} + '  '"/>
-                <td th:text="${user.getUsername()} + '  '"/>
-                <td th:text="${user.position} + '  '"/>
-                <td th:text="${user.getTelephones()} + '  '"/>
+            <tr th:each="user : ${users}">
+                <td th:text="${user.getUsername()} + '  '"></td>
+                <td th:text="${user.position} + '  '"></td>
+                <td th:text="${user.getTelephones()} + '  '"></td>
                 <td>
-                    <form th:method="GET" th:action="@{/user/{id}(id=${user.getId()})}" th:object="${user}">
-                        <input type="submit"
-                               value="Show details"/></form>
+                    <div>
+                        <form th:method="GET" th:action="@{/user/{id}(id=${user.getId()})}" th:object="${user}">
+                            <input type="submit" value="Details"/></form>
+                        </form>
+                    </div>
                 </td>
             </tr>
             </tbody>
         </table>
+        <nav class="pagination" aria-label="Page navigation example" th:if="${totalPages > 0}">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
+                    <a th:replace="fragments/all-users-paging :: paging(1, '<<', 'First Page')"></a>
+                </li>
+                <li class="page-item font-weight-bold" th:classappend="${currentPage == 1} ? 'disabled'">
+                    <a th:replace="fragments/all-users-paging :: paging(${currentPage - 1}, 'Prev', 'Previous Page')"></a>
+                </li>
+                <li class="page-item" th:if="${currentPage - 2 > 1}">
+                    <a class="page-link" href="#">...</a>
+                </li>
+                <li class="page-item" th:classappend="${page == currentPage} ? 'active'"
+                    th:each="page : ${#numbers.sequence(currentPage > 2 ? currentPage - 2 : 1, currentPage + 2 < totalPages ? currentPage + 2 : totalPages)}">
+                    <a th:replace="fragments/all-users-paging :: paging(${page}, ${page}, 'Page ' + ${page})"></a>
+                </li>
+                <li class="page-item disabled" th:if="${currentPage + 2 < totalPages}">
+                    <a class="page-link" href="#">...</a>
+                </li>
+                <li class="page-item font-weight-bold" th:classappend="${currentPage == totalPages} ? 'disabled'">
+                    <a th:replace="fragments/all-users-paging :: paging(${currentPage + 1},'Next', 'Next Page')"></a>
+                </li>
+                <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
+                    <a th:replace="fragments/all-users-paging :: paging(${totalPages}, '>>', 'Last Page')"></a>
+                </li>
+            </ul>
+        </nav>
     </div>
-    <hr>
+</div>
+</div>
 
-</form>
+<div th:replace="fragments/footer :: footer"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
