--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -12,11 +12,18 @@
             margin-right: auto;
             width: 25%;
         }
+        footer {
+            position: sticky;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 55px;
+        }
         form{padding:50px}
     </style>
 </head>
 <body>
-<div th:replace="~{_header}"></div>
+<div th:replace="~{fragments/header}"></div>
 <form th:action="@{/user/authorization}" th:object="${authUser}" method="post" >
     <div style="text-align: center;"><p>Enter your login and password:</p></div>
 
@@ -34,6 +41,7 @@
     <div style="text-align:center"><button  class="btn btn-secondary">Log in</button></div>
 
 </form>
+<div th:replace="fragments/footer :: footer"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
