--- a/src/main/resources/templates/client/client.html
+++ b/src/main/resources/templates/client/client.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Client</title>
@@ -18,39 +18,77 @@
             width: 25%;
         }
 
+        .card-body {
+            text-align: center;
+        }
+
         form {
-            padding: 50px
+            padding: 14px
+        }
+
+        footer {
+            position: sticky;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 55px;
         }
     </style>
 </head>
 <body>
-<div th:replace="~{_header}"></div>
+<div th:replace="~{fragments/header}"></div>
 
-<form th:method="post" th:action="@{/client/{id}(id=${id})}" th:object="${client}">
-    <div style="text-align: center;"><h2>Client information:</h2></div>
-    <div class="mb-3">
-        <label for="ClientName" class="form-label">Name of Client</label>
-        <input type="text" class="form-control" th:field="*{clientName}" id="ClientName">
-        <p th:if="${#fields.hasErrors('clientName')}" th:errors="*{clientName}"></p>
+<div sec:authorize="hasAuthority('ADMIN')">
+    <div class="container mt-4">
+        <div class="card bg-light">
+            <div class="card-body">
+                <h2 class="card-title">Task Information</h2>
+                <form th:method="PUT" th:action="@{/client/{id}(id=${id})}" th:object="${client}">
+                    <div class="mb-3">
+                        <label for="ClientName" class="form-label">Name of Client</label>
+                        <input type="text" class="form-control" th:field="*{clientName}" id="ClientName">
+                        <p th:if="${#fields.hasErrors('clientName')}" th:errors="*{clientName}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="SupervisorName" class="form-label">Name of Supervisor</label>
+                        <input type="text" class="form-control" th:field="*{supervisorName}" id="SupervisorName">
+                        <p th:if="${#fields.hasErrors('supervisorName')}" th:errors="*{supervisorName}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Email" class="form-label">Email</label>
+                        <input type="text" class="form-control" th:field="*{email}" id="Email">
+                        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Telephones" class="form-label">Telephone</label>
+                        <input type="text" class="form-control" th:field="*{telephones[0].number}" id="Telephones">
+                        <p th:if="${#fields.hasErrors('telephones')}" th:errors="*{telephones[0].number}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Country" class="form-label">Country</label>
+                        <input type="text" class="form-control" th:field="*{addresses[0].country}" id="Country">
+                    </div>
+                    <div class="mb-3">
+                        <label for="City" class="form-label">City</label>
+                        <input type="text" class="form-control" th:field="*{addresses[0].city}" id="City">
+                    </div>
+                    <div class="mb-3">
+                        <label for="Street" class="form-label">Street</label>
+                        <input type="text" class="form-control" th:field="*{addresses[0].street}" id="Street">
+                    </div>
+                    <div style="text-align:center">
+                        <button type="submit" class="btn btn-secondary">Add Task</button>
+                    </div>
+                </form>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-secondary">Delete</button>
+                </div>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="Address" class="form-label">Address of Client</label>
-        <input type="text" class="form-control" th:field="*{address}" id="Address">
-        <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Description" class="form-label">Description</label>
-        <input type="text" class="form-control" th:field="*{description}" id="Description">
-        <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
-    </div>
-
-
-    <div style="text-align:center"><button  class="btn btn-secondary">Edit</button></div>
-
-</form>
-<form th:method="DELETE" th:action="@{/user/{id}(id=${id})}">
-    <div style="text-align:center"><button  class="btn btn-secondary">Delete</button></div>
-</form>
+</div>
+<div th:replace="fragments/footer :: footer"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
