--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Main</title>
+    <style>
+        footer {
+            position: sticky;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 55px;
+        }
+    </style>
 
 </head>
 <body>
-<div th:replace="~{_header}"></div>
+<div th:replace="~{fragments/header}"></div>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-<div style="text-align: center;"><h1>Welcome to Astron Client Base!</h1></div>
+<div style="text-align: center;"><h1>Welcome to Client Base!</h1></div>
 
 
-
-
-</div>
+<div th:replace="fragments/footer :: footer"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
