--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,63 +1,97 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
-        html, body{width:100%; height:100%; margin:0}
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0
+        }
+
         .mb-3 {
             margin-left: auto;
             margin-right: auto;
             width: 25%;
         }
-        form{padding:50px}
+
+        .card-body {
+            text-align: center;
+        }
+
+        form {
+            padding: 14px
+        }
+
+        footer {
+            position: sticky;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 55px;
+        }
     </style>
 </head>
 <body>
-<div th:replace="~{_header}"></div>
-<form th:action="@{/user/registration}" th:object="${newUser}" th:method="post">
-    <div style="text-align: center;"><p>Enter your registration details:</p></div>
-    <div class="mb-3">
-        <label for="FirstName" class="form-label">First Name</label>
-        <input type="text" class="form-control" th:field="*{name}" id="FirstName">
-        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="LastName" class="form-label">Last Name</label>
-        <input type="text" class="form-control" th:field="*{lastname}" id="LastName">
-        <p th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="UserName" class="form-label">Username</label>
-        <input type="text" class="form-control" th:field="*{username}" id="UserName">
-        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Email" class="form-label">Email</label>
-        <input type="text" class="form-control" th:field="*{email}" id="Email">
-        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Password" class="form-label">Password</label>
-        <input type="text" class="form-control" th:field="*{password}" id="Password">
-        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Telephone" class="form-label">Telephone</label>
-        <input type="text" class="form-control" th:field="*{telephone}" id="Telephone">
-        <p th:if="${#fields.hasErrors('telephone')}" th:errors="*{telephone}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Position" class="form-label">Position</label>
-        <input type="text" class="form-control" th:field="*{position}" id="Position">
-        <p th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></p>
-    </div>
+<div th:replace="~{fragments/header}"></div>
 
-    <div style="text-align:center"><button  class="btn btn-secondary">Registration</button></div>
-</form>
 
+<div sec:authorize="hasAuthority('ADMIN')">
+    <div class="container mt-4">
+        <div class="card bg-light">
+            <div class="card-body">
+                <h2 class="card-title">Create New User</h2>
+                <form th:action="@{/user/registration}" th:object="${newUser}" th:method="POST">
+                    <div class="mb-3">
+                        <label for="FirstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" th:field="*{name}" id="FirstName">
+                        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="LastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" th:field="*{lastname}" id="LastName">
+                        <p th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="UserName" class="form-label">Username</label>
+                        <input type="text" class="form-control" th:field="*{username}" id="UserName">
+                        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Email" class="form-label">Email</label>
+                        <input type="text" class="form-control" th:field="*{email}" id="Email">
+                        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Password" class="form-label">Password</label>
+                        <input type="text" class="form-control" th:field="*{password}" id="Password">
+                        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Telephones" class="form-label">Telephone</label>
+                        <input type="text" class="form-control" th:field="*{telephones[0].number}" id="Telephones">
+                        <!--        <p th:if="${#fields.hasErrors('telephones')}" th:errors="*{telephone.number}"></p>-->
+                    </div>
+                    <div class="mb-3">
+                        <label for="Position" class="form-label">Position</label>
+                        <input type="text" class="form-control" th:field="*{position}" id="Position">
+                        <p th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></p>
+                    </div>
+                    <div style="text-align:center">
+                        <button type="submit" class="btn btn-secondary">Add User</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div th:replace="fragments/footer :: footer"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
