--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>newTask</title>
@@ -18,54 +18,70 @@
             width: 25%;
         }
 
-        .mb-4 {
-            margin-left: auto;
-            margin-right: auto;
-            width: 25%;
-            height: 1000%;
+        .card-body {
+            text-align: center;
         }
 
         form {
-            padding: 50px
+            padding: 14px
+        }
+
+        footer {
+            position: sticky;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 55px;
         }
     </style>
 </head>
 <body>
-<div th:replace="~{_header}"></div>
+<div th:replace="~{fragments/header}"></div>
 
-
-<form th:action="@{/task/create}" th:object="${newTask}" th:method="post">
-
-    <div style="text-align: center;"><h1>Create task:</h1></div>
-
-    <div class="mb-3">
-        <label for="Creator" class="form-label">Creator</label>
-        <input type="text" class="form-control" th:field="*{creator}" id="Creator">
-        <p th:if="${#fields.hasErrors('creator')}" th:errors="*{creator}"></p>
+<div sec:authorize="hasAuthority('ADMIN')">
+<div class="container mt-4">
+    <div class="card bg-light">
+        <div class="card-body">
+            <h2 class="card-title">Create New Task</h2>
+            <form th:action="@{/task/create}" th:object="${newTask}" th:method="POST">
+                <div class="mb-3">
+                    <label for="Client" class="form-label">Client</label>
+                    <select th:field="*{client}" class="form-select" id="Client">
+                        <option th:each="client : ${clients}" th:text="${client.getClientName()}"
+                                th:value="${client.getId()}"></option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="Performer" class="form-label">Performer</label>
+                    <select th:field="*{performer}" class="form-select" id="Performer">
+                        <option th:each="performer : ${performers}" th:text="${performer.getUsername()}"
+                                th:value="${performer.getId()}"></option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="taskStatus" class="form-label">Task Status</label>
+                    <select class="form-select" id="taskStatus" name="status" required th:field="*{status}">
+                        <option value="NEW">New</option>
+                        <option value="DONE">Done</option>
+                        <option value="IN_PROGRESS">In Progress</option>
+                        <option value="BACKLOG">Backlog</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Description</label>
+                    <textarea class="form-control" th:field="*{description}" id="exampleFormControlTextarea1"
+                              rows="3"></textarea>
+                    <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
+                </div>
+                <div style="text-align:center">
+                    <button type="submit" class="btn btn-secondary">Add Task</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="Performer" class="form-label">Performer</label>
-        <input type="text" class="form-control" th:field="*{performer}" id="Performer">
-        <p th:if="${#fields.hasErrors('performer')}" th:errors="*{performer}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Client" class="form-label">Client</label>
-        <input type="text" class="form-control" th:field="*{client}" id="Client">
-        <p th:if="${#fields.hasErrors('client')}" th:errors="*{client}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Description</label>
-        <textarea class="form-control" th:field="*{description}" id="exampleFormControlTextarea1" rows="3"></textarea>
-        <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></p>
-    </div>
-
-
-    <div style="text-align:center">
-        <button class="btn btn-secondary">Add Task</button>
-    </div>
-
-</form>
-
+</div>
+</div>
+<div th:replace="fragments/footer :: footer"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
