--- a/src/main/resources/templates/task/my-tasks.html
+++ b/src/main/resources/templates/task/my-tasks.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:text-align="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>All-clients</title>
+    <title>All-tasks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
@@ -11,95 +11,92 @@
             height: 100%;
             margin: 0
         }
-
         .mb-3 {
             width: 100%;
         }
-        .pagination {
+        footer {
             position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 55px;
+        }
+        .pagination {
+            position: sticky;
             left: 0;
             bottom: 0;
             width: 100%;
             height: 100px;
         }
 
-        footer {
-            position: sticky;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            height: 55px;
-        }
-
     </style>
 </head>
 <body>
 <div th:replace="~{fragments/header}"></div>
+<form th:action="@{/task/my-tasks}"></form>
 
-<div sec:authorize="hasAuthority('ADMIN')">
-<form th:action="@{/client/all-clients}"></form>
-
-<div style="text-align: center;"><h1>List of Clients:</h1></div>
+<div style="text-align: center;"><h1>List of Tasks:</h1></div>
 <hr>
 <div class="mb-3">
     <table class="table">
         <thead class="table-light">
-        <tr class="table-secondary">
-            <th scope="col">Name of client</th>
-            <th scope="col">Supervisor</th>
-            <th scope="col">Email</th>
-            <th scope="col">Telephone</th>
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Status</th>
+            <th scope="col">Created</th>
+            <th scope="col">Creator</th>
+            <th scope="col">Performer</th>
+            <th scope="col">Client</th>
+            <th scope="col">Description</th>
             <th scope="col">Action</th>
         </tr>
         </thead>
         <tbody>
-
-        <tr th:each="client : ${clients}">
-            <td th:text="${client.getClientName()} + '  '"></td>
-            <td th:text="${client.getSupervisorName()} + '  '"></td>
-            <td th:text="${client.getEmail()} + '  '"></td>
-            <td th:text="${client.getTelephones()} + '  '"></td>
+        <tr th:each="task: ${tasks}">
+            <td th:text="${task.getId} + '  '"/>
+            <td th:text="${task.getStatus()} + '  '"/>
+            <td th:text="${task.getCreatedAt()} + '  '"/>
+            <td th:text="${task.getCreator().getUsername()} + '  '"/>
+            <td th:text="${task.getPerformer().getUsername()} + '  '"/>
+            <td th:text="${task.getClient().getClientName()} + '  '"/>
+            <td th:text="${task.getDescription()} + '  '"/>
             <td>
-                <div>
-                    <form th:method="GET" th:action="@{/client/{id}(id=${client.getId()})}" th:object="${client}">
-                        <input type="submit" value="Details"/>
-                    </form>
-                </div>
+                <form th:method="GET" th:action="@{/task/{id}/(id=${task.getId()})}" th:object="${tasks}">
+                    <input type="submit" value="Details"/></form>
             </td>
         </tr>
         </tbody>
     </table>
-    <nav class="pagination-secondary" aria-label="Page navigation example" th:if="${totalPages > 0}">
+    <nav class="pagination" aria-label="Page navigation example" th:if="${totalPages > 0}">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
-                <a th:replace="fragments/all-clients-paging :: paging(1, '<<', 'First Page')"></a>
+                <a th:replace="fragments/my-tasks-paging :: paging(1, '<<', 'First Page')"></a>
             </li>
             <li class="page-item font-weight-bold" th:classappend="${currentPage == 1} ? 'disabled'">
-                <a th:replace="fragments/all-clients-paging :: paging(${currentPage - 1}, 'Prev', 'Previous Page')"></a>
+                <a th:replace="fragments/my-tasks-paging :: paging(${currentPage - 1}, 'Prev', 'Previous Page')"></a>
             </li>
             <li class="page-item" th:if="${currentPage - 2 > 1}">
                 <a class="page-link" href="#">...</a>
             </li>
-            <li class="page-item-secondary" th:classappend="${page == currentPage} ? 'active'"
+            <li class="page-item" th:classappend="${page == currentPage} ? 'active'"
                 th:each="page : ${#numbers.sequence(currentPage > 2 ? currentPage - 2 : 1, currentPage + 2 < totalPages ? currentPage + 2 : totalPages)}">
-                <a th:replace="fragments/all-clients-paging :: paging(${page}, ${page}, 'Page ' + ${page})"></a>
+                <a th:replace="fragments/my-tasks-paging :: paging(${page}, ${page}, 'Page ' + ${page})"></a>
             </li>
             <li class="page-item disabled" th:if="${currentPage + 2 < totalPages}">
                 <a class="page-link" href="#">...</a>
             </li>
             <li class="page-item font-weight-bold" th:classappend="${currentPage == totalPages} ? 'disabled'">
-                <a th:replace="fragments/all-clients-paging :: paging(${currentPage + 1},'Next', 'Next Page')"></a>
+                <a th:replace="fragments/my-tasks-paging :: paging(${currentPage + 1},'Next', 'Next Page')"></a>
             </li>
             <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
-                <a th:replace="fragments/all-clients-paging :: paging(${totalPages}, '>>', 'Last Page')"></a>
+                <a th:replace="fragments/my-tasks-paging :: paging(${totalPages}, '>>', 'Last Page')"></a>
             </li>
         </ul>
     </nav>
 </div>
-</div>
-</body>
 <div th:replace="fragments/footer :: footer"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+</body>
 </html>
