--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,70 +1,99 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>User page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
-        html, body{width:100%; height:100%; margin:0}
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0
+        }
+
         .mb-3 {
             margin-left: auto;
             margin-right: auto;
             width: 25%;
         }
-        form{padding:14px}
+
+        .card-body {
+            text-align: center;
+        }
+
+        form {
+            padding: 14px
+        }
+
+        footer {
+            position: sticky;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 55px;
+        }
     </style>
 </head>
 <body>
-<div th:replace="~{_header}"></div>
+<div th:replace="~{fragments/header}">></div>
 
-<form th:method="POST" th:action="@{/user/{id}(id=${id})}" th:object="${user}">
-
-    <div style="text-align: center;"><h2>User information:</h2></div>
-
-
-    <div class="mb-3">
-        <label for="FirstName" class="form-label">First Name</label>
-        <input type="text" class="form-control" th:field="*{name}" id="FirstName">
-        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+<div sec:authorize="hasAuthority('ADMIN')">
+    <div class="container mt-4">
+        <div class="card bg-light">
+            <div class="card-body">
+                <h2 class="card-title">User Details</h2>
+                <form th:method="PUT" th:action="@{/user/{id}(id=${id})}" th:object="${user}">
+                    <div class="mb-3">
+                        <label for="FirstName" class="form-label"><strong>First Name:</strong></label>
+                        <input type="text" class="form-control" th:field="*{name}" id="FirstName">
+                        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="LastName" class="form-label"><strong>Last Name:</strong></label>
+                        <input type="text" class="form-control" th:field="*{lastname}" id="LastName">
+                        <p th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="UserName" class="form-label"><strong>Username:</strong></label>
+                        <input type="text" class="form-control" th:field="*{username}" id="UserName">
+                        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Email" class="form-label"><strong>Email:</strong></label>
+                        <input type="text" class="form-control" th:field="*{email}" id="Email">
+                        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword" class="form-label"><strong>Password:</strong></label>
+                        <input type="password" class="form-control" th:field="*{password}" id="exampleInputPassword">
+                        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Telephones" class="form-label"><strong>Telephone:</strong></label>
+                        <input type="text" class="form-control" th:field="*{telephones[0].number}" id="Telephones">
+                        <p th:if="${#fields.hasErrors('telephones')}" th:errors="*{telephones[0].number}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Position" class="form-label"><strong>Position:</strong></label>
+                        <input type="text" class="form-control" th:field="*{position}" id="Position">
+                        <p th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <button type="submit" class="btn btn-secondary">Edit</button>
+                    </div>
+                </form>
+                <form th:method="DELETE" th:action="@{/user/{id}(id=${id})}">
+                    <div class="mb-3">
+                        <button type="submit" class="btn btn-secondary">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="LastName" class="form-label">Last Name</label>
-        <input type="text" class="form-control" th:field="*{lastname}" id="LastName">
-        <p th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="UserName" class="form-label">Username</label>
-        <input type="text" class="form-control" th:field="*{username}" id="UserName">
-        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Email" class="form-label">Email</label>
-        <input type="text" class="form-control" th:field="*{email}" id="Email">
-        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Password" class="form-label">Password</label>
-        <input type="text" class="form-control" th:field="*{password}" id="Password">
-        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
-    </div>
-    <div class="mb-3">
-        <label for="Position" class="form-label">Position</label>
-        <input type="text" class="form-control" th:field="*{position}" id="Position">
-        <p th:if="${#fields.hasErrors('position')}" th:errors="*{position}"></p>
-    </div>
-    <div style="text-align:center"><button  class="btn btn-secondary">Edit</button></div>
-</form>
-
-    <form th:method="DELETE" th:action="@{/user/{id}(id=${id})}">
-        <div style="text-align:center"><button  class="btn btn-secondary">Delete</button></div>
-    </form>
+</div>
 
 
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
